tests/base/invalid/Assign_CompileFail_1.whiley
import whiley.lang.*:*

int f():     
    return true
